# AndroidAvStudy

./: README.md
ffmpeg_study/: .gitignore  README.md  README.mk  ReadMe.mk  settings.gradle
ffmpeg_study/app/: build.gradle
ffmpeg_study/app/src/androidTest/java/com/ykhe/ffmpeg_study/: ExampleInstrumentedTest.java
ffmpeg_study/app/src/main/: AndroidManifest.xml
ffmpeg_study/app/src/main/cpp/: CMakeLists.txt  learn_ffmpeg.cpp  native-lib-paly-video.cpp  native-lib.cpp  native_player.cpp
ffmpeg_study/app/src/main/cpp/include/libavutil/: tx.h
ffmpeg_study/app/src/main/cpp/player/: AudioChannel.cpp  AudioChannel.h  AvPlayer.cpp  AvPlayer.h  BaseChannel.h  JavaCallbackHelper.cpp  JavaCallbackHelper.h  VideoChannel.cpp  VideoChannel.h  safe_queue.h
ffmpeg_study/app/src/main/cpp/util/: LogUtil.h
ffmpeg_study/app/src/main/java/com/ykhe/ffmpeg_study/: AvApplication.java  ContainerToYuvActivity.java  FirstIntegratedActivity.java  MainActivity.java  PlayVideoActivity.java
ffmpeg_study/app/src/main/java/com/ykhe/ffmpeg_study/player/: AVPlayer.java  PlayerActivity.java
ffmpeg_study/app/src/main/res/layout/: activity_first_integrated.xml  activity_main.xml  activity_player.xml  activity_to_yuv.xml
ffmpeg_study/app/src/main/res/values/: strings.xml  themes.xml
ffmpeg_study/app/src/main/res/values-night/: themes.xml
ffmpeg_study/app/src/test/java/com/ykhe/ffmpeg_study/: ExampleUnitTest.java
ffmpeg_study/gradle/wrapper/: gradle-wrapper.properties
